--- a/src/styles/side.css
+++ b/src/styles/side.css
@@ -29,6 +29,7 @@
   height: 20px;
   border-radius: 50%;
   background-color: #61dafb;
+  color: #1e2431;
   position: absolute;
   right: 12px;
   top: 145px;
