--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,7 +2,7 @@ body {
   color: #6e7a8e;
 }
 .footer-container {
-  width: 1400px;
+  width: 100%;
   height: 30px;
   background-color: #1e2431;
   display: inline-block;
