--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   text-align: center;
   position: relative;
   height: 100vh;
-  width: 100%;
+  max-width: 1035px;
+  background-color: #181e2b;
 }
 a {
   color: #61dafb;
