--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,7 @@
   text-align: center;
   position: relative;
   height: 100vh;
-  background-color: #181e2b;
-  width: 126.5%;
+  background-color: #1e2431;
 }
 a {
   color: #61dafb;
