--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 body {
   margin: 0;
   width: 100vh;
-  background-color: #181e2b;
+  background-color: #1e2431;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
 }
 
 code {
