--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
   position: relative;
+  width: 100%;
   height: 100vh;
-  width: 127vh;
   background-color: #1e2431;
 }
 a {
