--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
-  width: 100vh;
-  background-color: #1e2431;
+  padding: 0;
+  width: 100%;
+  background-color: springgreen;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -13,4 +14,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+html {
+  width: 100vw;
 }
