--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -2,6 +2,7 @@
   margin-left: 15px;
   margin-right: 15px;
   margin-top: 10px;
+  position: relative;
 }
 
 .intro {
@@ -65,4 +66,11 @@
   float: left;
   font-size: 20px;
   margin-right: 100px;
+}
+.me {
+  height: 300px;
+  position: absolute;
+  top: 50px;
+  left: 700px;
+  border: 2px solid white;
 }
