--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -1,6 +1,6 @@
 .main-container {
   width: 100%;
-  height: 700px;
+  max-height: 700px;
   margin-top: 40px;
   overflow: scroll;
   overflow-x: hidden;
